tests/baselines/reference/parameterPropertyInConstructor2.errors.txt
==== tests/cases/compiler/parameterPropertyInConstructor2.ts (3 errors) ====
    module mod {
      class Customers {
        constructor(public names: string);
                    ~~~~~~
!!! error TS1083: Parameter property declarations cannot be used in a constructor overload.
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2149: Overload signature is not compatible with function definition:
!!! 	Call signature expects 1 or fewer parameters.
        constructor(public names: string, public ages: number) {
                           ~~~~~
!!! error TS2000: Duplicate identifier 'names'.
        }
      }
    }
    